--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.android.tools.build:gradle:8.4.1'
+//         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+//         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
