--- a/tickseekbar/build.gradle
+++ b/tickseekbar/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
 
 def VERSION_NAME = "0.1.4"
 
@@ -55,3 +56,20 @@ dependencies {
 
 // apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
 // apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
+
+afterEvaluate 
+{
+  publishing 
+  {
+    publications
+    {
+      release(MavenPublication)
+      {
+        from components.release
+        groupId = 'com.github.hxcan'
+        artifactId = 'TickSeekBar'
+        version = '2024.8.21'
+      }
+    }
+  }
+}
